bin_PROGRAMS = s9xlauncher

s9xlauncher_SOURCES  =
s9xlauncher_SOURCES  += main.cpp
s9xlauncher_SOURCES  += application.cpp
s9xlauncher_SOURCES  += menu.cpp
s9xlauncher_SOURCES  += object.cpp
s9xlauncher_SOURCES  += item.cpp
s9xlauncher_SOURCES  += layout.cpp
s9xlauncher_SOURCES  += text_item.cpp
s9xlauncher_SOURCES  += line_layout.cpp

s9xlauncher_CPPFLAGS = $(CFLAGS) $(SDL2_CFLAGS)
s9xlauncher_LDFLAGS  = $(LDFLAGS) $(SDL2_LIBS)
s9xlauncher_LDADD	 = -lSDL2_ttf
